align fixes
alignment fixes

--- a/plugindemo/css/styles.css
+++ b/plugindemo/css/styles.css
@@ -1,10 +1,13 @@
 /*Style*/
 
+
 .inline-block{
 	display: inline-block;
 	zoom:1;
 	vertical-align: top;
 }
+
+p{margin: 20px 10px;}
 
 #container{
 	border: 1px solid red;
